# particle_system

./: CMakeLists.txt  Makefile  a.out  lib.sh  libft  particle  rtv1  test.c
grammar/: grammar.gr
includes/: ._particle.h  ._particle_try.h  ]  inputs.h  libft.h  parser.h  particle.h  particle_try.h  rt.h  vect.h
integrity/: integrity.txt
kernels/: ._particle.cl  ._particle.hl  ._particle_coll.cl  ._particle_old.cl  ._particle_old.hl  ._particle_try.cl  ._particle_try.hl  cluster_fuck.cl  n_body.cl  particle.cl  particle.hl  particle_coll.cl  particle_old.cl  particle_old.hl  particle_old_old.cl  particle_try.cl  particle_try.hl  particle_unroll.cl  particle_unroll_2.cl
libft/: Makefile  ft_deltab.c  ft_isdigit.c  ft_itoa_binary.c  ft_lst_delif.c  ft_lstadd_end.c  ft_lstsize.c  ft_print_bits.c  ft_putnstr.c  ft_strcmp.c  ft_strjoinfree.c  ft_strncmp.c  ft_strsplit.c  ft_strtolower.c  ft_strtoupper.c  ft_tabsize.c  get_next_line.c  get_next_line.h  libft.h
libft/printf/: Makefile
libft/printf/includes/: libft.h  printf.h
libft/printf/srcs/: ft_conv.c  ft_format.c  ft_get.c  ft_itoa.c  ft_out.c  ft_printf.c  ft_var.c
libft/sprintf/: Makefile
libft/sprintf/includes/: colors.h  defines.h  libft.h  sprintf.h  types.h
libft/sprintf/srcs/: ft_conv.c  ft_format.c  ft_get.c  ft_itoa.c  ft_out.c  ft_sprintf.c  ft_var.c
mlx/: ._Makefile  .__README_  ._font.c  ._font.xcf  ._man  ._mlx.h  ._mlx_init_loop.m  ._mlx_int.h  ._mlx_int_str_to_wordtab.c  ._mlx_new_image.m  ._mlx_new_window.h  ._mlx_new_window.m  ._mlx_rgb.c  ._mlx_shaders.c  ._mlx_xpm.c  Makefile  mlx_init_loop.m  mlx_new_window.m
mlx/man/: ._man3
mlx/man/man3/: ._mlx.1  ._mlx_loop.1  ._mlx_new_image.1  ._mlx_new_window.1  ._mlx_pixel_put.1
particle.dSYM/Contents/: Info.plist
particle.dSYM/Contents/Resources/DWARF/: particle
rtv1.dSYM/Contents/Resources/DWARF/: rtv1
scene/: scene1.sc
srcs/: ._opencl.c  :w  device.c  draw.c  init.c  key_funcs.c  keys.c  loops.c  main.c  mat.c  mat2.c  matrices.c  opencl.c  parser.c  parser_1.c  parser_2.c  parser_3.c  parser_4.c  parser_5.c  parser_6.c  parser_7.c  vect.c  vect2.c
