cmake_minimum_required(VERSION 3.6)
project(particle_system)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

set(SOURCE_FILES
    includes/inputs.h
    includes/mlx_opengl.h
    includes/particle.h
    includes/particle_try.h
    includes/vect.h
    kernels/cluster_fuck.cl
    kernels/n_body.cl
    kernels/particle.cl
    kernels/particle.hl
    kernels/particle_coll.cl
    kernels/particle_old.cl
    kernels/particle_old.hl
    kernels/particle_old_old.cl
    kernels/particle_try.cl
    kernels/particle_try.hl
    kernels/particle_unroll.cl
    kernels/particle_unroll_2.cl
    libft/lz4/includes/defines.h
    libft/lz4/includes/lz4.h
    libft/lz4/objs/compress.o
    libft/lz4/objs/decompress.o
    libft/lz4/objs/ft_lz4.o
    libft/lz4/objs/hash.o
    libft/lz4/objs/memcpy.o
    libft/lz4/objs/memrw.o
    libft/lz4/objs/objs.o
    libft/lz4/srcs/compress.c
    libft/lz4/srcs/decompress.c
    libft/lz4/srcs/ft_lz4.c
    libft/lz4/srcs/hash.c
    libft/lz4/srcs/memcpy.c
    libft/lz4/srcs/memrw.c
    libft/lz4/srcs/objs.c
    libft/lz4/compress.c
    libft/lz4/Makefile
    libft/printf/includes/colors.h
    libft/printf/includes/defines.h
    libft/printf/includes/libft.h
    libft/printf/includes/printf.h
    libft/printf/includes/types.h
    libft/printf/objs/ft_conv.o
    libft/printf/objs/ft_format.o
    libft/printf/objs/ft_get.o
    libft/printf/objs/ft_itoa.o
    libft/printf/objs/ft_out.o
    libft/printf/objs/ft_printf.o
    libft/printf/objs/ft_var.o
    libft/printf/objs/sprintf.o
    libft/printf/srcs/ft_conv.c
    libft/printf/srcs/ft_format.c
    libft/printf/srcs/ft_get.c
    libft/printf/srcs/ft_itoa.c
    libft/printf/srcs/ft_out.c
    libft/printf/srcs/ft_printf.c
    libft/printf/srcs/ft_var.c
    libft/printf/srcs/sprintf.c
    libft/printf/Makefile
    libft/auteur
    libft/ft_atoi.c
    libft/ft_atoi.o
    libft/ft_bzero.c
    libft/ft_bzero.o
    libft/ft_del.c
    libft/ft_del.o
    libft/ft_deltab.c
    libft/ft_deltab.o
    libft/ft_isalnum.c
    libft/ft_isalnum.o
    libft/ft_isalpha.c
    libft/ft_isalpha.o
    libft/ft_isascii.c
    libft/ft_isascii.o
    libft/ft_isdigit.c
    libft/ft_isdigit.o
    libft/ft_isinside.c
    libft/ft_isinside.o
    libft/ft_islower.c
    libft/ft_islower.o
    libft/ft_isprint.c
    libft/ft_isprint.o
    libft/ft_isupper.c
    libft/ft_isupper.o
    libft/ft_iswhite.c
    libft/ft_iswhite.o
    libft/ft_itoa.c
    libft/ft_itoa.o
    libft/ft_itoa_binary.c
    libft/ft_itoa_binary.o
    libft/ft_lst_delif.c
    libft/ft_lst_delif.o
    libft/ft_lstadd.c
    libft/ft_lstadd.o
    libft/ft_lstadd_end.c
    libft/ft_lstadd_end.o
    libft/ft_lstdel.c
    libft/ft_lstdel.o
    libft/ft_lstdelone.c
    libft/ft_lstdelone.o
    libft/ft_lstiter.c
    libft/ft_lstiter.o
    libft/ft_lstmap.c
    libft/ft_lstmap.o
    libft/ft_lstnew.c
    libft/ft_lstnew.o
    libft/ft_lstsize.c
    libft/ft_lstsize.o
    libft/ft_memalloc.c
    libft/ft_memalloc.o
    libft/ft_memccpy.c
    libft/ft_memccpy.o
    libft/ft_memchr.c
    libft/ft_memchr.o
    libft/ft_memcmp.c
    libft/ft_memcmp.o
    libft/ft_memcpy.c
    libft/ft_memcpy.o
    libft/ft_memdel.c
    libft/ft_memdel.o
    libft/ft_memmove.c
    libft/ft_memmove.o
    libft/ft_memset.c
    libft/ft_memset.o
    libft/ft_print_bits.c
    libft/ft_print_bits.o
    libft/ft_putchar.c
    libft/ft_putchar.o
    libft/ft_putchar_fd.c
    libft/ft_putchar_fd.o
    libft/ft_putendl.c
    libft/ft_putendl.o
    libft/ft_putendl_fd.c
    libft/ft_putendl_fd.o
    libft/ft_putnbr.c
    libft/ft_putnbr.o
    libft/ft_putnbr_fd.c
    libft/ft_putnbr_fd.o
    libft/ft_putnstr.c
    libft/ft_putstr.c
    libft/ft_putstr.o
    libft/ft_putstr_fd.c
    libft/ft_putstr_fd.o
    libft/ft_strcat.c
    libft/ft_strcat.o
    libft/ft_strchr.c
    libft/ft_strchr.o
    libft/ft_strclr.c
    libft/ft_strclr.o
    libft/ft_strcmp.c
    libft/ft_strcmp.o
    libft/ft_strcpy.c
    libft/ft_strcpy.o
    libft/ft_strdel.c
    libft/ft_strdel.o
    libft/ft_strdup.c
    libft/ft_strdup.o
    libft/ft_strequ.c
    libft/ft_strequ.o
    libft/ft_striter.c
    libft/ft_striter.o
    libft/ft_striteri.c
    libft/ft_striteri.o
    libft/ft_strjoin.c
    libft/ft_strjoin.o
    libft/ft_strjoinfree.c
    libft/ft_strjoinfree.o
    libft/ft_strlcat.c
    libft/ft_strlcat.o
    libft/ft_strlen.c
    libft/ft_strlen.o
    libft/ft_strmap.c
    libft/ft_strmap.o
    libft/ft_strmapi.c
    libft/ft_strmapi.o
    libft/ft_strncat.c
    libft/ft_strncat.o
    libft/ft_strncmp.c
    libft/ft_strncmp.o
    libft/ft_strncpy.c
    libft/ft_strncpy.o
    libft/ft_strndup.c
    libft/ft_strndup.o
    libft/ft_strnequ.c
    libft/ft_strnequ.o
    libft/ft_strnew.c
    libft/ft_strnew.o
    libft/ft_strnstr.c
    libft/ft_strnstr.o
    libft/ft_strrchr.c
    libft/ft_strrchr.o
    libft/ft_strsplit.c
    libft/ft_strsplit.o
    libft/ft_strstr.c
    libft/ft_strstr.o
    libft/ft_strsub.c
    libft/ft_strsub.o
    libft/ft_strtolower.c
    libft/ft_strtolower.o
    libft/ft_strtoupper.c
    libft/ft_strtoupper.o
    libft/ft_strtrim.c
    libft/ft_strtrim.o
    libft/ft_tabsize.c
    libft/ft_tabsize.o
    libft/ft_tolower.c
    libft/ft_tolower.o
    libft/ft_toupper.c
    libft/ft_toupper.o
    libft/get_next_line.c
    libft/get_next_line.h
    libft/get_next_line.o
    libft/libft
    libft/libft.a
    libft/libft.h
    libft/Makefile
    mlx/man/man3/mlx.1
    mlx/man/man3/mlx_loop.1
    mlx/man/man3/mlx_new_image.1
    mlx/man/man3/mlx_new_window.1
    mlx/man/man3/mlx_pixel_put.1
    mlx/_README_
    mlx/font.c
    mlx/font.xcf
    mlx/libmlx.a
    mlx/Makefile
    mlx/mlx.h
    mlx/mlx_init_loop.m
    mlx/mlx_init_loop.o
    mlx/mlx_int.h
    mlx/mlx_int_str_to_wordtab.c
    mlx/mlx_int_str_to_wordtab.o
    mlx/mlx_new_image.m
    mlx/mlx_new_image.o
    mlx/mlx_new_window.h
    mlx/mlx_new_window.m
    mlx/mlx_new_window.o
    mlx/mlx_opengl.h
    mlx/mlx_opengl.m
    mlx/mlx_opengl.o
    mlx/mlx_README
    mlx/mlx_rgb.c
    mlx/mlx_shaders.c
    mlx/mlx_shaders.o
    mlx/mlx_xpm.c
    mlx/mlx_xpm.o
    objs/device.o
    objs/draw.o
    objs/key_funcs.o
    objs/keys.o
    objs/loops.o
    objs/main.o
    objs/mat.o
    objs/mat2.o
    objs/opencl.o
    objs/vect.o
    objs/vect2.o
    particle.dSYM/Contents/Resources/DWARF/particle
    particle.dSYM/Contents/Info.plist
    srcs/device.c
    srcs/draw.c
    srcs/key_funcs.c
    srcs/keys.c
    srcs/loops.c
    srcs/main.c
    srcs/mat.c
    srcs/mat2.c
    srcs/opencl.c
    srcs/vect.c
    srcs/vect2.c
    lib.sh
    libft.a
    Makefile
    particle
    texture.bmp)

add_executable(particle_system ${SOURCE_FILES})